Upgrade jwt version 0.12.6 with necessary modification and Improve Code Smell